Fix spacing on oauth page

--- a/src/containers/OAuth.scss
+++ b/src/containers/OAuth.scss
@@ -12,3 +12,7 @@ pre > code {
   padding: 0 0 1em 0;
 }
 
+h1 {
+  margin-top: 0;
+}
+
